--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Скоро только кошки родятся©</h1>
-    
+    <div class="container">
+    <header class="header">
+        <nav class="nav">
+            <ul class="nav__list">
+                <li class="list__item"><button class="button">Обо мне</button></li>
+                <li class="list__item"><button class="button">Работа</button></li>
+                <li class="list__item"><button class="button">Дипломы</button></li>
+                <li class="list__item"><button class="button">Публикации</button></li>
+                <li class="list__item"><button class="button">Консультация</button></li>
+            </ul>
+        </nav>
+    </header>
+        <main class="main">
+            <p class="content"></p>
+            <!-- <h1>Психолог Наиль Гареев</h1> -->
+        </main>
+    </div>
 </body>
 </html>
