about me text from layout

--- a/index.html
+++ b/index.html
@@ -12,17 +12,35 @@
     <header class="header">
         <nav class="nav">
             <ul class="nav__list">
-                <li class="list__item"><button class="button">Обо мне</button></li>
-                <li class="list__item"><button class="button">Работа</button></li>
-                <li class="list__item"><button class="button">Дипломы</button></li>
-                <li class="list__item"><button class="button">Публикации</button></li>
-                <li class="list__item"><button class="button">Консультация</button></li>
+                <li class="list__item"><a href='#about-me'class="link">Обо мне</a></li>
+                <li class="list__item"><a href='#'class="link">Работа</a></li>
+                <li class="list__item"><a href='#'class="link">Дипломы</a></li>
+                <li class="list__item"><a href='#'class="link">Публикации</a></li>
+                <li class="list__item"><a href='#'class="link">Консультация</a></li>
             </ul>
         </nav>
     </header>
         <main class="main">
-            <p class="content"></p>
-            <!-- <h1>Психолог Наиль Гареев</h1> -->
+            <section id='about-me' class="content about-me">
+                <p class="paragraph">Психолог: Гареев Наиль Наилевич, 1979 г.</p>
+                <p class="paragraph">
+                    <h2 class="paragraph__heading">
+                        Образование
+                    </h2>
+                    <ul class="paragraph__list">
+                        <li class="paragraph__list__item">Высшее психологическое, РГГУ,</li>
+                        <li class="paragraph__list__item">Институт Психологии им. Л.С. Выготского;</li>
+                        <li class="paragraph__list__item">МГППУ, Институт Системного Консультирования</li>
+                    </ul>
+                </p>
+                <p class="paragraph">
+                    <ul class="paragraph__list">
+                        <li class="paragraph__list__item">Специализация: "Психология развития"</li>
+                        <li class="paragraph__list__item">Специализация: "Трансактный анализ"</li>
+                    </ul>
+                </p>
+            </section>
+            <h1 class='heading'>Психолог Наиль Гареев</h1>
         </main>
     </div>
 </body>
