--- a/index.html
+++ b/index.html
@@ -1,47 +1,93 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Не психуй</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/1992e6bed8.js" crossorigin="anonymous"></script>
+  </head>
+  <body>
     <div class="container">
-    <header class="header">
+      <header class="header">
         <nav class="nav">
-            <ul class="nav__list">
-                <li class="list__item"><a href='#about-me'class="link">Обо мне</a></li>
-                <li class="list__item"><a href='#'class="link">Работа</a></li>
-                <li class="list__item"><a href='#'class="link">Дипломы</a></li>
-                <li class="list__item"><a href='#'class="link">Публикации</a></li>
-                <li class="list__item"><a href='#'class="link">Консультация</a></li>
-            </ul>
+          <ul class="nav__list">
+            <li class="list-item">
+              <a href="#about-me" class="nav__link active-link" id ="about-me">Обо мне</a>
+            </li>
+            <li class="list-item"><a href="#" id="practice" class="nav__link">Работа</a></li>
+            <!-- <li class="list-item"><a href="#" id="diplomas" class="nav__link">Дипломы</a></li> -->
+            <!-- <li class="list-item"><a href="#" id="publications" class="nav__link">Публикации</a></li> -->
+            <li class="list-item"><a href="#" id="consulting" class="nav__link">Консультация</a></li>
+          </ul>
         </nav>
-    </header>
-        <main class="main">
-            <section id='about-me' class="content about-me">
-                <p class="paragraph">Психолог: Гареев Наиль Наилевич, 1979 г.</p>
-                <p class="paragraph">
-                    <h2 class="paragraph__heading">
-                        Образование
-                    </h2>
-                    <ul class="paragraph__list">
-                        <li class="paragraph__list__item">Высшее психологическое, РГГУ,</li>
-                        <li class="paragraph__list__item">Институт Психологии им. Л.С. Выготского;</li>
-                        <li class="paragraph__list__item">МГППУ, Институт Системного Консультирования</li>
-                    </ul>
-                </p>
-                <p class="paragraph">
-                    <ul class="paragraph__list">
-                        <li class="paragraph__list__item">Специализация: "Психология развития"</li>
-                        <li class="paragraph__list__item">Специализация: "Трансактный анализ"</li>
-                    </ul>
-                </p>
-            </section>
-            <h1 class='heading'>Психолог Наиль Гареев</h1>
-        </main>
+      </header>
+      <main class="main">
+        <section id="about-me-content" class="active content about-me">
+          <h2 class="section__heading">Психолог: Гареев Наиль Наилевич, 1979 г.</h2>
+          <h2 class="list__heading section__heading">
+            Образование:
+          </h2>
+          <ul class="section__list">
+            <li class="paragraph__list-item">
+              РГГУ, Институт Психологии им. Л.С. Выготского 
+              Специализация: "Трансактный анализ"
+            </li>
+            <li class="paragraph__list-item">
+              МГППУ, Институт Системного Консультирования
+              Специализация: "Психология развития"
+            </li>
+          </ul>
+        </section>
+        <section class="content practice" id="practice-content">
+            <h2 class="section__heading practice__heading">Частная практика</h2>
+            <h2 class="list-heading section__heading practice__heading">Формат работы:</h2>
+            <ul class="section__list practice__list">
+              <li class="section__list-item">- Индивидуальные сессии</li>
+              <li class="section__list-item">- Работа с парой</li>
+              <li class="section__list-item">- Групповые занятия</li>
+            </ul>
+            <h2 class="list-heading section__heading">Направления работы</h2>
+            <ul class="section__list">
+              <li class="section__list-item">эмоциональные состояния</li>
+              <li class="section__list-item">депрессия, кризисы, отношения, самооценка</li>
+              <!-- <!-- <li class="section__list-item">кризисы</li> --> 
+              <!-- <li class="section__list-item">отношения</li> -->
+              <!-- <li class="section__list-item">самооценка</li> -->
+              <li class="section__list-item">качество жизни, реализация</li>
+              <!-- <!-- <li class="section__list-item">реализация</li> -->
+            </ul>
+            <ul class="section__list practice__list"></ul>
+        </section>
+        <section class="content diplomas">
+          <h2 class="section__heading">Дипломы</h2>
+        </section>
+        <section id="consulting-content" class="content consulting">
+          <p class="content__paragraph content__paragraph_consulting">Консультации происходят по&nbsp;предварительной записи</p>
+          <p class="content__paragraph content__paragraph_consulting">Длительность 1 час</p>
+          <p class="content__paragraph content__paragraph_consulting">Стоимость: 5000 ₽</p>
+          <p class="content__paragraph content__paragraph_consulting">Необходимое количество консультаций определяется на первой встрече</p>
+        </section>
+        <h1 class="heading">Психолог Наиль Гареев</h1>
+      </main>
+      <footer class="footer">
+        <a class="contacts" href="https://www.facebook.com/nail.gareev">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a class="contacts" href="https://t.me/NailGareev">
+          <i class="fab fa-telegram-plane"></i>
+        </a>
+        <a class="contacts" href="mailto:hinail@yahoo.com" class="email">
+          <i class="far fa-envelope"></i>
+          hinail@yahoo.com
+        </a>
+        <a class="contacts" href="tel:+7926900116">
+            <i class="fas fa-phone-alt"></i>
+            +7 960 01 16
+        </a>
+      </footer>
     </div>
-</body>
+    <script src="index.js"></script>
+  </body>
 </html>
