--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </header>
       <main class="main">
         <section id="about-me-content" class="active content about-me">
-          <h2 class="section__heading">Психолог: Гареев Наиль Наилевич, 1979 г.</h2>
+          <h2 class="section__heading">Психолог: Гареев Наиль Наильевич, 1979 г.</h2>
           <h2 class="list__heading section__heading">
             Образование:
           </h2>
@@ -48,7 +48,7 @@
               <li class="section__list-item">- Работа с парой</li>
               <li class="section__list-item">- Групповые занятия</li>
             </ul>
-            <h2 class="list-heading section__heading">Направления работы</h2>
+            <h2 class="list-heading section__heading">Направления работы:</h2>
             <ul class="section__list">
               <li class="section__list-item">эмоциональные состояния</li>
               <li class="section__list-item">депрессия, кризисы, отношения, самооценка</li>
