fix telegram link, add @media

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <li class="list-item">
               <a href="#about-me" class="nav__link active-link" id ="about-me">Обо мне</a>
             </li>
-            <li class="list-item"><a href="#" id="practice" class="nav__link">Работа</a></li>
-            <!-- <li class="list-item"><a href="#" id="diplomas" class="nav__link">Дипломы</a></li> -->
+            <li class="list-item"><a href="#" id="practice" class="nav__link">Для кого</a></li>
+            <!-- <li class= "list-item"><a href="#" id="diplomas" class="nav__link">Дипломы</a></li> -->
             <!-- <li class="list-item"><a href="#" id="publications" class="nav__link">Публикации</a></li> -->
             <li class="list-item"><a href="#" id="consulting" class="nav__link">Консультация</a></li>
           </ul>
@@ -32,11 +32,11 @@
           <ul class="section__list">
             <li class="paragraph__list-item">
               РГГУ, Институт Психологии им. Л.С. Выготского 
-              Специализация: "Трансактный анализ"
+              Специализация: «Психология развития»
             </li>
             <li class="paragraph__list-item">
               МГППУ, Институт Системного Консультирования
-              Специализация: "Психология развития"
+              Специализация: «Трансактный анализ»
             </li>
           </ul>
         </section>
@@ -72,19 +72,16 @@
         <h1 class="heading">Психолог Наиль Гареев</h1>
       </main>
       <footer class="footer">
-        <a class="contacts" href="https://www.facebook.com/nail.gareev">
-          <i class="fab fa-facebook-f"></i>
-        </a>
         <a class="contacts" href="https://t.me/NailGareev">
           <i class="fab fa-telegram-plane"></i>
         </a>
-        <a class="contacts" href="mailto:hinail@yahoo.com" class="email">
+        <a class="contacts email" href="mailto:hinail@yahoo.com">
           <i class="far fa-envelope"></i>
           hinail@yahoo.com
         </a>
         <a class="contacts" href="tel:+7926900116">
             <i class="fas fa-phone-alt"></i>
-            +7 960 01 16
+            +7 926 960 01 16
         </a>
       </footer>
     </div>
