new file .gitignore, ass whatsapp, fix email position

--- a/index.html
+++ b/index.html
@@ -73,8 +73,11 @@
       </main>
       <footer class="footer">
         <a class="contacts" href="https://t.me/NailGareev">
-          <i class="fab fa-telegram-plane"></i>
-        </a>
+        <i class="fab fa-telegram-plane"></i>
+      </a>
+      <a class="contacts" href="https://wa.me/79266900116">
+        <i class="fab fa-whatsapp"></i>
+      </a>
         <a class="contacts email" href="mailto:hinail@yahoo.com">
           <i class="far fa-envelope"></i>
           hinail@yahoo.com
