position mobile & desktop contacts

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <body>
     <div class="container">
       <div class="flex-container-mobile">
-        <div class="greetings-mobile">Дядьки мои дорогие! Будьте себями самими</div>
         <div class="contacts-mobile">
           <a class="contacts" href="https://wa.me/79266900116">
             <i class="fab fa-whatsapp"></i>
@@ -22,7 +21,17 @@
         </a>
         </div>
       </div>
+      
       <header class="header">
+          <div class="contacts-desktop">
+            <a class="contacts" href="https://wa.me/79266900116">
+              <i class="fab fa-whatsapp"></i>
+            </a>
+            <a class="contacts" href="tel:+7926900116">
+              <i class="fas fa-phone-alt"></i>
+              +7 926 960 01 16
+          </a>
+          </div>
         <nav class="nav">
           <ul class="nav__list">
             <li class="list-item">
@@ -81,9 +90,6 @@
           <p class="content__paragraph content__paragraph_consulting">Стоимость: 5000 ₽</p>
           <p class="content__paragraph content__paragraph_consulting">Необходимое количество консультаций определяется на первой встрече</p>
         </section>
-        <h3 class="greetings">
-          Дядьки мои дорогие! Оставайтесь себями самими!
-        </h3>
         <h1 class="heading">Психолог Наиль Гареев</h1>
       </main>
       <footer class="footer">
