fix price, fix tab name in browser

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Не психуй</title>
+    <title>Наиль Гареев, психолог</title>
     <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/1992e6bed8.js" crossorigin="anonymous"></script>
   </head>
@@ -87,7 +87,7 @@
         <section id="consulting-content" class="content consulting">
           <p class="content__paragraph content__paragraph_consulting">Консультации происходят по&nbsp;предварительной записи</p>
           <p class="content__paragraph content__paragraph_consulting">Длительность 1 час</p>
-          <p class="content__paragraph content__paragraph_consulting">Стоимость: 5000 ₽</p>
+          <p class="content__paragraph content__paragraph_consulting">Стоимость: 15000 ₽</p>
           <p class="content__paragraph content__paragraph_consulting">Необходимое количество консультаций определяется на первой встрече</p>
         </section>
         <h1 class="heading">Психолог Наиль Гареев</h1>
